src/objects/Exception_Log__c.object
<CustomObject>
    <description>Stores the exception details.</description>
    <fields>
        <fullName>Class_Method_Name__c</fullName>
        <description>Contains the class and method name where the exception raised</description>
        <inlineHelpText>Contains the class and method name where the exception raised</inlineHelpText>
        <label>Class Method Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Details__c</fullName>
        <description>Contains the Stack Trace Details of the exception.</description>
        <inlineHelpText>Contains the Stack Trace Details of the exception.</inlineHelpText>
        <label>Error Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>Contains the details of error occured.</description>
        <inlineHelpText>Contains the details of error occured.</inlineHelpText>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exception_Type__c</fullName>
        <description>Contains the type of exception thrown.</description>
        <inlineHelpText>Contains the type of exception thrown.</inlineHelpText>
        <label>Exception Type</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>Contains the name of the object.</description>
        <inlineHelpText>Contains the name of the object.</inlineHelpText>
        <label>Object Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <description>Contains the Record Id for which the error was thrown.</description>
        <inlineHelpText>Contains the Record Id for which the error was thrown.</inlineHelpText>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Exception Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Error_Details__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Exception_Type__c</columns>
        <columns>Object_Name__c</columns>
        <columns>Record_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EL-{0000000}</displayFormat>
        <label>Exception Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>